<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@mipmap/ic_launcher_round"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:id="@+id/loginlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFF"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/logo"
        android:textSize="64sp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:inputType="textPersonName"
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_below="@id/loginlabel"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
    />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_below="@id/username"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/greybg"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="50sp"
        android:textStyle="bold" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_below="@id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bluebg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_with_facebook"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bluebg"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        />


</RelativeLayout>