<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp">
<RelativeLayout
    android:background="@drawable/greybg" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">


<TextView
    android:id="@+id/entryno"
    android:minHeight="90dp"
    android:minWidth="90dp"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/serialno"

    android:textSize="40sp"
    android:textAlignment="center"
    android:background="@drawable/circlebg"
    android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/count"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/entryno"
        android:layout_toEndOf="@id/entryno"
        android:layout_height="wrap_content"
        android:text="@string/totalpushups"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/chronometertime"
        android:layout_toRightOf="@id/entryno"
        android:layout_toEndOf="@id/entryno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/totaltimetaken"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/count"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>





</RelativeLayout>
</androidx.cardview.widget.CardView>